syntax = "proto3";

package wres.statistics.generated;

import "wresproto/pool.proto";
import "wresproto/double_score_statistic.proto";
import "wresproto/diagram_statistic.proto";
import "wresproto/boxplot_statistic.proto";
import "wresproto/duration_score_statistic.proto";
import "wresproto/duration_diagram_statistic.proto";
import "wresproto/summary_statistic.proto";

option java_package = "wres.statistics.generated";
option java_outer_classname = "StatisticsProto";
option java_multiple_files = true;

message Statistics
{
    /*A message that encapsulates an atomic collection of statistics, namely the 
    statistics associated with one pool. An evaluation identifier is required to 
    connect a Statistics message to an Evaluation message. It is assumed that 
    this identifier is packaged with the protocol; it is not provided inband.*/

    Pool pool = 1;
    // The pool whose pairs were used to create the statistics here.

    Pool baseline_pool = 2;
    // The pool of baseline pairs used to create the statistics here. When the 
    // statistics include skill scores, both the pool and baseline_pool should
    // be populated. The boundaries of the baseline_pool may differ from those 
    // of the pool.
    
    repeated DoubleScoreStatistic scores = 3;
    // Zero or more score statistics.
    
    repeated DiagramStatistic diagrams = 4;
    // Zero or more diagram statistics.
    
    repeated BoxplotStatistic one_box_per_pool = 5;
    // Zero or more boxplot statistics that contain one box per pool.

    repeated BoxplotStatistic one_box_per_pair = 6;
    // Zero or more boxplot statistics that contain one box per pair.
    
    repeated DurationScoreStatistic duration_scores = 7;
    // Zero or more duration score statistics.
    
    repeated DurationDiagramStatistic duration_diagrams = 8;
    // Zero or more duration diagram statistics.

    int32 minimum_sample_size = 9;
    // The minimum sample size used to compute statistics in this collection.

    double sample_quantile = 10;
    // The quantile of the sampling distribution to which all statistics in this
    // collection correspond. If the value is zero, these statistics were
    // derived from a nominal sample, i.e., without the estimation of sampling
    // uncertainty. A value greater than zero and less than one represents an
    // actual quantile.

    SummaryStatistic summary_statistic = 11;
    // When present, all of the statistics in this collection correspond to the 
    // prescribed summary statistic and not a raw statistic value. A summary
    // statistic includes a statistic name, such as a mean, and a dimension over 
    // which the statistic is computed, such as all geographic features within  
    // the evaluation. In that case, the pool information refers only to those 
    // attributes of the pool that are common to all pools from which the
    // summary statistic was computed and, specifically, not to the dimension.
    // By way of example, this collection may include a continuous ranked
    // probability skill score and the summary statistic may represent a mean
    // over geographic features. In that case, the score should be interpreted
    // as an average skill across geographic features and not a raw skill for
    // any single feature. Also, the pool information should not include any
    // geographic features.
}